# WASM_Rust_game

./: Cargo.toml  README.md  index.html
pkg/: bevy_wasm_game.d.ts  bevy_wasm_game.js  bevy_wasm_game_bg.wasm.d.ts  package.json
src/: lib.rs
