[package]
name = "bevy_wasm_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.0"
winit = "0.28.6"
bevy_audio = "0.11.0"
rand = "0.8"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.84"
instant = "0.1.12"
web-sys = "0.3.69"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
